docker/common-panel-service-prod/nuxt-with-nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-panel-service-webserver
  namespace: funnelbuiler-solution-prod
  labels:
    tier: common-panel-frontend
    layer: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: common-panel-frontend
      layer: webserver
  template:
    metadata:
      labels:
        tier: common-panel-frontend
        layer: webserver
    spec:
      containers:
        - name: webserver
          imagePullPolicy: Always
          image: bdfunnelbuilder/bdf-common-prod:v0.0.6
          resources:
            limits:
              cpu: "0.2"
              memory: "128M"
            requests:
              cpu: "0.2"
              memory: "128M"
          ports:
            - containerPort: 3000
          # Liveness Probe
          livenessProbe:
            httpGet:
              path: /system-health
              port: 80 # Port on which the probe should be performed
            initialDelaySeconds: 15 # Delay before the first probe
            periodSeconds: 10 # How often to perform the probe
            timeoutSeconds: 1 # How long to wait for the probe to complete
            failureThreshold: 3 # Number of consecutive failures before marking the container as not ready
          # Readiness Probe
          readinessProbe:
            httpGet:
              path: /system-health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
      imagePullSecrets:
        - name: regcred
