docker/common-panel-service-prod/nuxt-with-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-panel-service-webserver
  namespace: funnelbuiler-solution-prod
spec:
  ingressClassName: nginx
  rules:
    - host: "bdfunnelbuilder.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: common-panel-service-webserver
                port:
                  number: 80
    - host: admin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain-service-webserver
                port:
                  number: 80
    - host: admin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain-service-webserver
                port:
                  number: 80
